# enclave-core

./: .gitignore  AGENTS.md  Cargo.toml  rust-toolchain.toml  tests-to-add.md
src/: domain.rs  error.rs  lib.rs
src/attest/: bundle.rs  challenge.rs  mock.rs  mod.rs  nsm.rs
src/auth/: mod.rs  nonce_cache.rs  redis_nonce.rs  verify.rs
src/bootstrap/: handshake.rs  mod.rs
src/config/: env.rs  mod.rs  validator.rs
src/crypto/: aead.rs  ecdh.rs  ecies.rs  ed25519.rs  hkdf.rs  hmac.rs  mod.rs  otp.rs  stream_aead.rs  zeroize_ext.rs
src/keys/: blob.rs  generation.rs  mod.rs  sealing.rs  slot.rs
src/server/: limits.rs  listener.rs  mod.rs  shutdown.rs
tests/: attest_extra.rs  auth_verify_integration.rs  bootstrap_adv.rs  bootstrap_handshake.rs  canonical_bytes_determinism.rs  config_env_listener.rs  domain_separation.rs  ecies_adv.rs  ecies_roundtrip.rs  kats_aes_gcm.rs  kats_hkdf.rs  low_order_point.rs  nonce_replay.rs  redis_integration.rs  sealed_blob_aad.rs  stream_aead_adv.rs  stream_aead_truncation.rs
